--- a/clean_tracks.ipynb
+++ b/clean_tracks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,18 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2723: DtypeWarning: Columns (0,1,5,6,8,12,18,20,21,22,24,33,34,38,39,44,47,49) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "tracks = pd.read_csv('tracks.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +152,7 @@
        "4       20  Spiritual Level  Nicky Cook             NaN"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +174,7 @@
        "106574"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +207,7 @@
        "49597"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "tracks1.to_csv('tracks1.csv',index=False)"
+    "tracks2.to_csv('tracks1.csv',index=False)"
    ]
   },
   {
