--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# MUSIC Classification"
+    "# <font color= blue> MUSIC Classification"
    ]
   },
   {
@@ -19,11 +19,11 @@
     }
    },
    "source": [
-    "# Scale and Growth of Digital Music Industry\n",
-    "\n",
+    "# <font color= blue> Scale and Growth of Digital Music Industry\n",
+    "***\n",
     "- YouTube has ~1.5B monthly active users and a revenue of 40B\n",
     "- Digital Music revenue(subscription+ streaming+ Download) has grown 10% YoY\n",
-    "- Physical Musics revenue has dropped 10% YoY"
+    "- Physical Music revenue has dropped 10% YoY"
    ]
   },
   {
@@ -45,13 +45,16 @@
     }
    },
    "source": [
-    "## Music Consuption has become predominantly Digital\n",
+    "## <font color= blue> Music Consuption has become predominantly Digital\n",
+    "***\n",
+    "\n",
     "\n",
     "- For the first time, we have the Data to understand user behaviour\n",
-    "- Understanding user behaviour is a key to Growth of Music platforms"
+    "- Understanding user behaviour is a key to growth of music platforms"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -59,12 +62,19 @@
     }
    },
    "source": [
-    "# Music Recommendation\n",
+    "# <font color= blue> Music Recommendation\n",
+    "***\n",
     "\n",
-    "## 1. Collaborative Filtering of User behaviour (agnostic of Music content)\n",
+    "## 1. Collaborative Filtering of User behaviour\n",
+    "- Agnostic of Music content\n",
+    "- Accurate with large datasets\n",
     "\n",
     "    \n",
     "## 2. Understanding and modeling using Music content\n",
+    "\n",
+    "- Understand the human perception of music\n",
+    "- Build recommendation engine on top of that\n",
+    "- __Music classification is the key__\n",
     "\n"
    ]
   },
@@ -76,7 +86,8 @@
     }
    },
    "source": [
-    "# Goal: Music Classification"
+    "# <font color= blue> Goal: Music Classification\n",
+    "***"
    ]
   },
   {
@@ -106,7 +117,8 @@
     }
    },
    "source": [
-    "## Describe the dataset\n",
+    "## <font color= blue> Features\n",
+    "***\n",
     "\n",
     "<img src=\"Features_smartart.png\", width=1200, height=1000, align=middle>\n",
     "\n",
@@ -122,13 +134,14 @@
     }
    },
    "source": [
-    "## Methodology\n",
+    "# <font color= blue> Methodology\n",
     "\n",
-    "### We have used three approaces to predict Genres:\n",
+    "### We have used four approaces to predict Genres:\n",
     "\n",
-    "#### 1. KNN\n",
-    "#### 2. Random Forest\n",
-    "#### 3. Gradient Boosting"
+    "> #### 1. KNN\n",
+    "> #### 2. Random Forest\n",
+    "> #### 3. Gradient Boosting\n",
+    "> #### 4. Neural Network"
    ]
   },
   {
@@ -139,7 +152,7 @@
     }
    },
    "source": [
-    "## Using KNN"
+    "## <font color= blue> KNN"
    ]
   },
   {
@@ -150,7 +163,7 @@
     }
    },
    "source": [
-    "## Using Random Forest"
+    "## <font color= blue> Random Forest"
    ]
   },
   {
@@ -161,22 +174,53 @@
     }
    },
    "source": [
-    "# Results"
+    "## <font color= blue> Gradient Boost"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## <font color= blue> Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# <font color= blue> Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "# Way Forward"
+    "# Way Forward\n",
+    "\n",
+    "## -  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
